--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,30 @@
 {
-    "buildCommand": "sh build.sh"
-}
+    "version":2,
+    "builds":[
+       {
+          "src":"djangoProject/wsgi.py",
+          "use":"@vercel/python",
+          "config":{
+             "maxLambdaSize":"15mb",
+             "runtime":"python3.9"
+          }
+       },
+       {
+          "src":"build.sh",
+          "use":"@vercel/static-build",
+          "config":{
+             "distDir":"staticfiles_build"
+          }
+       }
+    ],
+    "routes":[
+       {
+          "src":"/static/(.*)",
+          "dest":"/static/$1"
+       },
+       {
+          "src":"/(.*)",
+          "dest":"djangoProject/wsgi.py"
+       }
+    ]
+ }
