--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,13 @@
 {
-    "version":2,
-    "builds":[
+   "builds": [{
+       "src": "djangoProject/wsgi.py",
+       "use": "@vercel/python",
+       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+   }],
+   "routes": [
        {
-          "src":"djangoProject/wsgi.py",
-          "use":"@vercel/python",
-          "config":{
-             "maxLambdaSize":"15mb",
-             "runtime":"python3.9"
-          }
-       },
-       {
-          "src":"build.sh",
-          "use":"@vercel/static-build",
-          "config":{
-             "distDir":"staticfiles_build"
-          }
+           "src": "/(.*)",
+           "dest": "djangoProject/wsgi.py"
        }
-    ],
-    "routes":[
-       {
-          "src":"/static/(.*)",
-          "dest":"/static/$1"
-       },
-       {
-          "src":"/(.*)",
-          "dest":"djangoProject/wsgi.py"
-       }
-    ]
- }
+   ]
+}
