--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
        "src": "djangoProject/wsgi.py",
        "use": "@vercel/python",
        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+   },
+   {
+        "src": "build.sh",
+        "use": "@vercel/static-build"
    }],
    "routes": [
        {
