--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
    },
    {
         "src": "build.sh",
-        "use": "@vercel/static-build"
+        "use": "@vercel/vercel-poetry@latest"
    }],
    "routes": [
        {
